--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,30 @@
-.App {
-  text-align: center;
+  body {
+    background: url('court.jpg');
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-attachment: fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+.container {
+  padding: 0;
+  margin: 0;
+}
+/* 
+.main {
+  width: 100%;
+  height: 100%;
+  background-image: url("court.jpg");
+  background-color: red;
+  background-size: cover;
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
 
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+ */
+ .header {
+  display: flex;
+  justify-content: flex-end;
 }
