--- a/src/controllers/Header.css
+++ b/src/controllers/Header.css
@@ -7,7 +7,7 @@
     align-items: center;
     background-color: rgb(111,38,51);
     padding: 10px 50px;
-    font-family: 'Alfa Slab One', cursive;;
+    font-family: 'Alfa Slab One', cursive;
 } 
 
 h1 {
@@ -16,4 +16,5 @@ h1 {
     -webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
     -moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
     box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+    font-size: 4vh;
 }
